Added a ConnectingMessageBuffer to handle pre-connect data that is passed to the client
- If a user sends data in OnConnected or a user receives data prior to being fully "connected" we buffer the messages and then replay them once we've received the initialize message.
- This is all handled within the connection itself
- Also added the ConnectingMessageBuffer to all of the client projects

#1889

--- a/src/Microsoft.AspNet.SignalR.Client45/Microsoft.AspNet.SignalR.Client45.csproj
+++ b/src/Microsoft.AspNet.SignalR.Client45/Microsoft.AspNet.SignalR.Client45.csproj
@@ -126,6 +126,9 @@
     <Compile Include="..\Microsoft.AspNet.SignalR.Client\Transports\AsyncStreamReader.cs">
       <Link>Transports\AsyncStreamReader.cs</Link>
     </Compile>
+    <Compile Include="..\Microsoft.AspNet.SignalR.Client\Transports\ConnectingMessageBuffer.cs">
+      <Link>Transports\ConnectingMessageBuffer.cs</Link>
+    </Compile>
     <Compile Include="..\Microsoft.AspNet.SignalR.Client\Transports\LongPolling\NegotiateInitializer.cs">
       <Link>Transports\LongPolling\NegotiateInitializer.cs</Link>
     </Compile>
