--- a/src/Microsoft.AspNet.SignalR.Client/Microsoft.AspNet.SignalR.Client.csproj
+++ b/src/Microsoft.AspNet.SignalR.Client/Microsoft.AspNet.SignalR.Client.csproj
@@ -108,6 +108,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Transports\AsyncStreamReader.cs" />
+    <Compile Include="Transports\ConnectingMessageBuffer.cs" />
     <Compile Include="Transports\LongPolling\NegotiateInitializer.cs" />
     <Compile Include="Transports\LongPolling\PollingRequestHandler.cs" />
     <Compile Include="Transports\ServerSentEvents\ChunkBuffer.cs" />
