Added Functional and Unit tests to verify the init message functionality on the JS client

--- a/tests/Microsoft.AspNet.SignalR.Tests.Common/Microsoft.AspNet.SignalR.Tests.Common.csproj
+++ b/tests/Microsoft.AspNet.SignalR.Tests.Common/Microsoft.AspNet.SignalR.Tests.Common.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Hubs\ChatWithGroups.cs" />
     <Compile Include="Hubs\EchoHub.cs" />
     <Compile Include="Hubs\ExamineHeadersHub.cs" />
+    <Compile Include="Hubs\GroupJoiningHub.cs" />
     <Compile Include="Hubs\MyItemsHub.cs" />
     <Compile Include="Infrastructure\BasicAuthenticationProvider.cs" />
     <Compile Include="Infrastructure\ClientAssertExtensions.cs" />
