Addressed code review comments

--- a/tests/Microsoft.AspNet.SignalR.FunctionalTests/Microsoft.AspNet.SignalR.FunctionalTests.csproj
+++ b/tests/Microsoft.AspNet.SignalR.FunctionalTests/Microsoft.AspNet.SignalR.FunctionalTests.csproj
@@ -85,6 +85,9 @@
     <Compile Include="..\Microsoft.AspNet.SignalR.Tests.Common\Infrastructure\CountDownRange.cs">
       <Link>Infrastructure\CountDownRange.cs</Link>
     </Compile>
+    <Compile Include="..\Microsoft.AspNet.SignalR.Tests.Common\Infrastructure\OrderedCountDownRange.cs">
+      <Link>Infrastructure\OrderedCountDownRange.cs</Link>
+    </Compile>
     <Compile Include="Client\ConnectionFacts.cs" />
     <Compile Include="Client\HubProxyFacts.cs" />
     <Compile Include="Client\KeepAliveFacts.cs" />
