--- a/tests/Microsoft.AspNet.SignalR.Tests.Common/Microsoft.AspNet.SignalR.Tests.Common.csproj
+++ b/tests/Microsoft.AspNet.SignalR.Tests.Common/Microsoft.AspNet.SignalR.Tests.Common.csproj
@@ -34,14 +34,15 @@
   <ItemGroup>
     <Reference Include="Microsoft.Owin, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Microsoft.Owin.1.1.0-beta1-20511-301\lib\net45\Microsoft.Owin.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.Owin.1.1.0-beta1-20514-307\lib\net45\Microsoft.Owin.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Owin.Hosting, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Microsoft.Owin.Hosting.1.1.0-beta1-20511-301\lib\net40\Microsoft.Owin.Hosting.dll</HintPath>
+      <HintPath>..\..\packages\Microsoft.Owin.Hosting.1.1.0-beta1-20514-307\lib\net40\Microsoft.Owin.Hosting.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Owin.Mapping">
-      <HintPath>..\..\packages\Microsoft.Owin.Mapping.0.22.0-pre-20511-301\lib\net40\Microsoft.Owin.Mapping.dll</HintPath>
+    <Reference Include="Microsoft.Owin.Mapping, Version=0.22.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\packages\Microsoft.Owin.Mapping.0.22.0-pre-20514-307\lib\net40\Microsoft.Owin.Mapping.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Owin.Security.Basic">
       <HintPath>..\..\packages\Microsoft.Owin.Security.Basic.1.1.0-beta1-20502-274\lib\net45\Microsoft.Owin.Security.Basic.dll</HintPath>
