Added copyright notice to nuspecs
#2045

--- a/nuspecs/Microsoft.AspNet.SignalR.Utils.nuspec
+++ b/nuspecs/Microsoft.AspNet.SignalR.Utils.nuspec
@@ -7,6 +7,7 @@
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <licenseUrl>__SIGNALR_LICENSE_URL__</licenseUrl>
+        <copyright>__SIGNALR_COPYRIGHT_NOTICE__</copyright>
         <projectUrl>http://www.asp.net/signalr</projectUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <description>Command line utilities for ASP.NET SignalR, including performance counter installation and Hub JavaScript proxy generation.</description>
