--- a/nuspecs/Microsoft.AspNet.SignalR.JS.nuspec
+++ b/nuspecs/Microsoft.AspNet.SignalR.JS.nuspec
@@ -7,6 +7,7 @@
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <licenseUrl>__SIGNALR_LICENSE_URL__</licenseUrl>
+        <copyright>__SIGNALR_COPYRIGHT_NOTICE__</copyright>
         <projectUrl>http://www.asp.net/signalr</projectUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <description>JavaScript client for ASP.NET SignalR.</description>
