--- a/nuspecs/Microsoft.AspNet.SignalR.SelfHost.nuspec
+++ b/nuspecs/Microsoft.AspNet.SignalR.SelfHost.nuspec
@@ -7,6 +7,7 @@
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <licenseUrl>__SIGNALR_LICENSE_URL__</licenseUrl>
+        <copyright>__SIGNALR_COPYRIGHT_NOTICE__</copyright>
         <projectUrl>http://www.asp.net/signalr</projectUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <description>A client and server side library for .NET that provides messaging and an abstraction over a persistent connection. This package pulls in the required dependencies for self-hosting SignalR in a process outside of IIS using OWIN and HTTPListener.</description>
