--- a/nuspecs/Microsoft.AspNet.SignalR.ServiceBus.nuspec
+++ b/nuspecs/Microsoft.AspNet.SignalR.ServiceBus.nuspec
@@ -7,6 +7,7 @@
         <authors>Microsoft</authors>
         <owners>Microsoft</owners>
         <licenseUrl>__SIGNALR_LICENSE_URL__</licenseUrl>
+        <copyright>__SIGNALR_COPYRIGHT_NOTICE__</copyright>
         <projectUrl>http://www.asp.net/signalr</projectUrl>
         <requireLicenseAcceptance>true</requireLicenseAcceptance>
         <description>Service Bus messaging backplane for scaling out of ASP.NET SignalR applications in a web-farm.</description>
